Don't pass transient hint

Not persistent doesn not imply transient, that is an unrelated property.

There are vaild use cases for transient notifications, but it shouldn't
be set unconditionally.

BUG: 422042